--- a/bounded-range.cabal
+++ b/bounded-range.cabal
@@ -62,6 +62,7 @@ library
   -- Other library packages from which modules are imported.
   build-depends:  base >= 4.7 && < 5
                   , parsec >= 3
+                  , safe
 
   if impl(ghc < 8)
     build-depends: free >= 4.12 && < 5
@@ -82,6 +83,7 @@ Test-Suite test-range
                   , test-framework              >= 0.4 && < 0.9
                   , random                      >= 1.0
                   , range
+                  , safe
    if impl(ghc < 8)
     build-depends: free >= 4.12 && < 5
    else
